# snitch

mlir/: Makefile.rules  README.md
mlir/examples/echo/: .gitignore  Makefile  main.ll
mlir/runtime/: CMakeLists.txt
sw/snMLIR/: CMakeLists.txt
sw/snMLIR/src/: snmlir.cpp
